--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "@testing-library/jest-dom": "^6.8.0",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "katex": "^0.16.22",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-katex": "^3.1.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
